# Rodex

./: .railwayignore  AGENTS.md  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  railway.template.json
.github/workflows/: deploy-preview.yml  deploy-production.yml
configs/: base.env  playwright.config.ts  project_settings.json  railway.env.template
docs/: ai-elements.md  ai-sdk-overview.md  codebase-analysis-playbook.md  feature_ideas.md  feature_opportunities.md  implementation-plan.md  initial_development_plan.md  landing_page_spec.md  prompt-kit-tutorial.md
docs/architecture/: gemini-streaming.md
docs/deployments/: railway-template.md  railway-templates-overview.md  resilient-gemini-environment.md  vercel-framework-settings.md
infra/docker/: Dockerfile.base
infra/terraform/: main.tf
reports/: runtime_evaluation.md
services/: __init__.py
services/automation/: __init__.py  main.py  railway.toml  runner.py
services/planner/: __init__.py  gemini_stream.py  landing_api.py  project_settings.py  railway.toml
services/planner/_data/: __init__.py
tests/: conftest.py  test_automation_runner.py  test_gemini_stream.py  test_landing_api.py  test_project_settings.py
