[project]
name = "rodex-platform"
version = "0.1.0"
description = "Autonomous web automation platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rodex Team" }]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "structlog>=23.2",
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
planner = [
  "google-generativeai>=0.5.0",
  "websockets>=11.0",
  "httpx>=0.27",
  "fastapi>=0.111",
]
automation = [
  "playwright>=1.43",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.setuptools.package-data]
"services.planner" = ["_data/*.json"]

